<resources>
    <string name="app_name">StyleSwap</string>

    <string name="fragment_bottom_bar_id">TAG</string>
    <string name="fragment_im_id">TAG</string>
    <string name="fragment_edit_profle_id">TAG</string>
    <string name="fragment_profile_id">TAG</string>
    <string name="bottom_bar_hello">Hello</string>
    <string name="bottom_bar_bye">GoodBye</string>
    <string name="fragment_im_matches_title">MATCHES</string>
    <string name="doop">::{\' - \' }</string>
    <string name="item_description">Description</string>
    <string name="item_size">Size</string>
    <string name="user_number">Number</string>
    <string name="user_email">Email</string>
    <string name="user_name">Name</string>
    <string name="user_description">Description</string>

    <string name="app_start_login">LOG IN</string>
    <string name="app_start_register">REGISTER</string>

    <string name="fragment_im_write_msg">Write a message&#8230;</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="dress_sizes">
        <item>2</item>
        <item>4</item>
        <item>6</item>
        <item>8</item>
        <item>10</item>
        <item>12</item>
        <item>14</item>
        <item>16</item>
        <item>18</item>
        <item>20</item>
    </string-array>

    <string name="im_no_matches">You don\'t have any matches yet!</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="activity_login_text">Log in</string>
    <string name="activity_login_sign_up">Sign Up here</string>
    <string name="activity_login_remember_me">Remember me?</string>
    <string name="activity_reg_email_hint">Email</string>
    <string name="activity_reg_password_hint">Password</string>
    <string name="activity_reg_name_hint">Name</string>
    <string name="activity_reg_age_hint">Age</string>
    <string name="activity_reg_dress_size_hint">Dress size</string>
    <string name="activity_reg_phone_number_hint">Phone number</string>
    <string name="activity_reg_button_text">Register</string>
    <string name="fragment_edit_prof_name_hint">Name</string>
</resources>
